Fixed tool_user_admin CSS and layout issues

--- a/tools/tool_user_admin/css/tool_user_admin.less
+++ b/tools/tool_user_admin/css/tool_user_admin.less
@@ -4,11 +4,20 @@
 * Loaded on tool init
 */
 
+// imports
+	@import '../../../core/page/css/layout/vars';
+
+// local vars
+	@color_bg_tool : #a22b29;
 
 
-// tool wrapper
-// Encapsulate all tool content to prevent core collisions
+
+// tool wrapper. Encapsulate all tool content to prevent core collisions
 	.wrapper_tool.tool_user_admin {
+
+		>.tool_header {
+			position: relative;
+		}
 
 		>.content_data {
 
@@ -21,54 +30,69 @@
 					outline: 0;
 					pointer-events: none;
 				}
+
 				// wrapper section record
 				.section_record {
+
 					>.content_data{
 						display: grid;
 						align-content: stretch;
 						grid-template-columns: repeat(10, 1fr);
 
 						.wrapper_component {
+							margin-top: 0rem;
+
 							&.disabled_component:after {
 								content: unset;
 							}
+							// section_id
 							&.dd330{
 								grid-row: 1;
 								opacity: 1;
 							}
-							&.dd1725{
-								grid-column			: span 3;
-								opacity: .8;
-								// background-color	: #FFE2AB;
+							// username
+							&.dd132 {
+								display: block;
+								grid-column: span 2;
+								opacity: 0.8;
+								// font-size: 2em;
+    							// text-align: center;
+								// // background-color	: #FFE2AB;
+
+								// >.content_data {
+								// 	display: block;
+								// 	padding: 0;
+								// }
 							}
-							&.dd132{
-								grid-column			: span 2;
-								font-size: 2em;
-    							text-align: center;
-    							opacity: .8;
-								// background-color	: #FFE2AB;
-							}
-							&.dd452{
-								grid-row	: 2;
-								grid-column	: span 2;
-								background-color	: #FFE2AB;
-							}
-							&.dd133{
-								grid-row	: 2;
-								grid-column	: span 2;
-								background-color	: #FFE2AB;
-							}
-							&.dd134{
-								grid-row	: 2;
-								grid-column	: span 2;
-								background-color	: #FFE2AB;
-							}
-							&.dd522{
-								grid-row	: 1 / span 3;
-								grid-column	: span 4;
-								// background-color	: #FFE2AB;
+							// select (Admin general)
+							&.dd1725 {
+								grid-column: span 3;
+								opacity: 0.8;
 							}
 
+							// full name
+							&.dd452 {
+								grid-row: 2;
+								grid-column: span 3;
+								background-color: #FFE2AB;
+							}
+							// password
+							&.dd133 {
+								grid-row: 2;
+								grid-column: span 3;
+								background-color: #FFE2AB;
+							}
+							// email
+							&.dd134 {
+								grid-row: 3;
+								grid-column: span 6;
+								background-color: #FFE2AB;
+							}
+							// image
+							&.dd522{
+								grid-row: 1 / span 4;
+								grid-column: span 4;
+							}
 						}
 					}
 				}
@@ -81,7 +105,7 @@
 
 // modal header tool modification
 	.tool_header.tool_user_admin {
-		background-color: #a22b29;
+		background-color: @color_bg_tool;
 	}
 
 
